Fix zem-date-input z-index.

--- a/client/one/app/shared/components/date-input/date-input.component.less
+++ b/client/one/app/shared/components/date-input/date-input.component.less
@@ -54,6 +54,10 @@
 // NgbDatepicker overrides //
 /////////////////////////////
 
+.ngb-dp-body {
+    z-index: @z-index--popover !important;
+}
+
 .ngb-dp-header {
     padding-bottom: 0.2rem;
 }
